// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile column with image bottom huge 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              childTestID="article-slug"
              color="#005B8D"
              title="label"
            />
          </View>
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 24,
              "fontWeight": "900",
              "includeFontPadding": false,
              "lineHeight": 24,
              "marginBottom": 10,
            }
          }
          testID="article-summary-headline"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 0,
            }
          }
          testID="article-summary-content"
        >
          <Text>
            
            Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile column with image bottom medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              childTestID="article-slug"
              color="#005B8D"
              title="label"
            />
          </View>
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 24,
              "fontWeight": "900",
              "includeFontPadding": false,
              "lineHeight": 24,
              "marginBottom": 10,
            }
          }
          testID="article-summary-headline"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile column with image bottom shows an image 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              childTestID="article-slug"
              color="#005B8D"
              title="label"
            />
          </View>
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 24,
              "fontWeight": "900",
              "includeFontPadding": false,
              "lineHeight": 24,
              "marginBottom": 10,
            }
          }
          testID="article-summary-headline"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile column with image bottom shows portrait image when in portrait wide (ipad pro) 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              childTestID="article-slug"
              color="#005B8D"
              title="label"
            />
          </View>
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 24,
              "fontWeight": "900",
              "includeFontPadding": false,
              "lineHeight": 24,
              "marginBottom": 10,
            }
          }
          testID="article-summary-headline"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
  <Image
    aspectRatio={0.6666666666666666}
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
  />
</Link>
`;

exports[`tile column with image bottom smallTablet 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              childTestID="article-slug"
              color="#005B8D"
              title="label"
            />
          </View>
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 24,
              "fontWeight": "900",
              "includeFontPadding": false,
              "lineHeight": 24,
              "marginBottom": 10,
            }
          }
          testID="article-summary-headline"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile column with image bottom wide 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              childTestID="article-slug"
              color="#005B8D"
              title="label"
            />
          </View>
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 24,
              "fontWeight": "900",
              "includeFontPadding": false,
              "lineHeight": 24,
              "marginBottom": 10,
            }
          }
          testID="article-summary-headline"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 0,
            }
          }
          testID="article-summary-content"
        >
          <Text>
            
            Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;
